--- a/projnew/css/background/minecraft.css
+++ b/projnew/css/background/minecraft.css
@@ -3,11 +3,18 @@ body::before{
     background-image: url(/img/minefundo.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    position: fixed;
+    position: absolute;
     width: 100%;
-    background-size: 100%;
+    background-position: center center;
+    background-size: 110%;
     content: "";
     height: 100vh;
     z-index: -2;
-    opacity: 0.1;
+    opacity: .2;
+    transition: 1s;
+    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+}
+
+body.scrolled::before {
+    background-size: 100%;  
 }
