--- a/projnew/css/paginas_jogos.css
+++ b/projnew/css/paginas_jogos.css
@@ -232,6 +232,7 @@ div.aplicativos div{
 
 div.aplicativos div:hover{
     opacity: 0.6;
+    box-shadow: 0px 0px 10px 1px hsla(0, 0%, 100%, 0.5);
 }
 
 div.aplicativos img{
@@ -267,7 +268,7 @@ h2.titulo_avaliacoes{
     margin-top: 45px;
 }
 
-h2.trailer{
+h2.soundtrack{
     margin-top: 45px;
     margin-bottom: 5px;
 }
@@ -331,7 +332,7 @@ div.avaliacaouser{
 
 textarea#user_avali{
     width: 100%;
-    height: 100px;
+    height: 250px;
     background-color: black;
     color: #fff;
     border: 1px solid #fff;
@@ -397,10 +398,25 @@ div.premios ul li{
 }
 
 .estrelameio:before {
-    content: '\2605'; /* Código unicode para uma estrela vazia */
+    content: '\2605'; 
     position: absolute;
     left: 0;
     overflow: hidden;
-    width: 50%; /* Metade da largura da estrela */
-    color: gold; /* Cor da metade da estrela */
+    width: 50%;
+    color: gold; 
+}
+
+.estrelamenor {
+    position: relative;
+    display: inline-block;
+    color: gray;
+}
+
+.estrelamenor:before {
+    content: '\2605';
+    position: absolute;
+    left: 0;
+    overflow: hidden;
+    width: 35%;
+    color: gold; 
 }
