--- a/html/css/background/diablo.css
+++ b/html/css/background/diablo.css
@@ -1,5 +1,5 @@
 body::before{
-    background-image: url(/img/diablotras.png);
+    background-image: url(https://marco-aurelio-martins.github.io/Projeto-Front-End/html/img/diablotras.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     position: absolute;
