--- a/html/css/background/minecraft.css
+++ b/html/css/background/minecraft.css
@@ -1,6 +1,6 @@
 
 body::before{
-    background-image: url(/img/minefundo.png);
+    background-image: url(https://marco-aurelio-martins.github.io/Projeto-Front-End/html/img/minefundo.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     position: absolute;
